--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         const distanceCalculatorWrapper = document.getElementById('distance-calculator-wrapper');
 
         // --- URL для Google Apps Script ---
-        const googleScriptUrl = 'ВАШ_URL_СКРИПТА_ЗДЕСЬ';
+        const googleScriptUrl = 'https://script.google.com/macros/s/AKfycbyrIqzJ3cqq1ZJDiK3bNlBSGF_BWPoxaUmmP24xxgQAzrJQ4_Ku-oN5XKRW8wvMTxKL/exec';
 
         // --- Структура данных ---
         let appData = { logs: {}, customEvents: [], shiftNames: { "Честер": "Честер", "Козак": "Козак" } };
