--- a/map.html
+++ b/map.html
@@ -41,7 +41,7 @@
 <body>
     <div id="map"></div>
     <script>
-        const googleScriptUrl = 'ВАШ_URL_СКРИПТА_ЗДЕСЬ';
+        const googleScriptUrl = 'https://script.google.com/macros/s/AKfycbyrIqzJ3cqq1ZJDiK3bNlBSGF_BWPoxaUmmP24xxgQAzrJQ4_Ku-oN5XKRW8wvMTxKL/exec';
         const EARTH_RADIUS = 6371e3;
 
         let map = L.map('map', { attributionControl: false }).setView([49.0, 32.0], 7);
