--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
     <!-- Подключение MGRS -->
     <script src="https://cdn.jsdelivr.net/npm/mgrs@2.0.0/mgrs.min.js"></script>
 
-    <!-- Ваши кастомные стили и скрипты -->
-    <link rel="stylesheet" href="https://jen9-ops.github.io/library/style.css">
-
     <!-- PWA Manifest -->
     <link id="manifest-link" rel="manifest">
 
@@ -201,6 +198,11 @@
                         <button id="map-button" title="Показать карту" class="text-sm text-gray-400 hover:text-white hover:bg-gray-700 p-2 rounded-lg transition">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM4.332 8.027a6.012 6.012 0 011.912-2.706C6.512 5.73 6.974 6 7.5 6A1.5 1.5 0 019 7.5V8a2 2 0 004 0 2 2 0 011.523-1.943A5.998 5.998 0 0116 10c0 .954-.225 1.852-.635 2.667l-5.26 6.247a.5.5 0 01-.81 0l-5.26-6.247A5.998 5.998 0 014 10c0-.343.028-.677.082-1.007zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd" /></svg>
                         </button>
+                         <a href="map.html" target="_blank" title="Открыть карту в новой вкладке" class="text-sm text-gray-400 hover:text-white hover:bg-gray-700 p-2 rounded-lg transition">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+                            </svg>
+                        </a>
                         <button id="stats-button" title="Показать статистику" class="text-sm text-gray-400 hover:text-white hover:bg-gray-700 p-2 rounded-lg transition">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M2 11a1 1 0 011-1h2a1 1 0 011 1v5a1 1 0 01-1 1H3a1 1 0 01-1-1v-5zM8 7a1 1 0 011-1h2a1 1 0 011 1v9a1 1 0 01-1 1H9a1 1 0 01-1-1V7zM14 4a1 1 0 011-1h2a1 1 0 011 1v12a1 1 0 01-1 1h-2a1 1 0 01-1-1V4z" /></svg>
                         </button>
@@ -280,7 +282,7 @@
         const distanceCalculatorWrapper = document.getElementById('distance-calculator-wrapper');
 
         // --- URL для Google Apps Script ---
-        const googleScriptUrl = 'https://script.google.com/macros/s/AKfycbyrIqzJ3cqq1ZJDiK3bNlBSGF_BWPoxaUmmP24xxgQAzrJQ4_Ku-oN5XKRW8wvMTxKL/exec';
+        const googleScriptUrl = 'ВАШ_URL_СКРИПТА_ЗДЕСЬ';
 
         // --- Структура данных ---
         let appData = { logs: {}, customEvents: [], shiftNames: { "Честер": "Честер", "Козак": "Козак" } };
