--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         const distanceCalculatorWrapper = document.getElementById('distance-calculator-wrapper');
 
         // --- URL для Google Apps Script ---
-        const googleScriptUrl = 'ВАШ_URL_СКРИПТА_ЗДЕСЬ';
+        const googleScriptUrl = 'https://script.google.com/macros/s/AKfycbyqhhPgUvIVE9H-j3fQrmlDv0j890TuKgidHyI9meU23ywmso5gFEpB2M54mKmZhNNa/exec';
 
         // --- Структура данных ---
         let appData = { logs: {}, customEvents: [], shiftNames: { "Честер": "Честер", "Козак": "Козак" } };
